<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="64sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="64dp" />

    <TextView
        android:id="@+id/text_view_session_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/press_start_button"
        android:textSize="32sp"
        android:layout_marginBottom="32dp"/>

    <TextView
        android:id="@+id/text_view_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial_time_display"
        android:textSize="48sp"
        android:layout_marginBottom="32dp"/>

    <Button
        android:id="@+id/button_start_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"/>

    <Button
        android:id="@+id/button_start_break"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_break"
        android:layout_marginTop="16dp"
        />
</LinearLayout>